# crystal-facet-uml

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  LICENSE.txt  README.md  license.txt  readme.markdown  readme.txt  release_notes.txt  todo.txt
architecture/doc/: architecture.txt  export_self_architecture_to_git.sh  import_self_architecture_to_local.sh  programming_guidelines.txt  self.cfu.sqlite3  self.cfu1  self.cfu1_sqlite3  self_architecture.cfu1  self_architecture.cfuJ  self_architecture.json  self_architecture_export_to_git.sh  self_architecture_import.sh
build_deb/: make.sh
build_deb/debian/: changelog  control  copyright  doc-base  docs  rules
build_deb/salsa_scripts/: debian_manual_build.sh
build_doxygen/: Doxyfile  make.sh  source_code_doc.txt
build_package/: debian_pack.sh  make.sh  readme.markdown  source_coverage.sh  source_pack.sh  source_test.sh
build_rpm/: make.sh  readme.markdown
build_rpm/SPECS/: crystal-facet-uml.spec
build_win/: CMakeLists.txt  cross_file.txt  mingw_wine_toolchain.cmake  readme.markdown
build_win/pack_scripts/: 0_cleanup.sh  1_configure.sh  2_make.sh  3_install.sh  4_test.sh  5_pack.sh
cmake_build/: CMakeLists.txt
cmake_build/cfu_install_files/: crystal_facet_uml.desktop
ctrl/include/: ctrl_classifier.h  ctrl_classifier_controller.h  ctrl_classifier_policy_enforcer.h  ctrl_classifier_policy_enforcer.inl  ctrl_classifier_trigger.h  ctrl_classifier_trigger.inl  ctrl_consistency_checker.h  ctrl_controller.h  ctrl_controller.inl  ctrl_diagram.h  ctrl_diagram_controller.h  ctrl_diagram_policy_enforcer.h  ctrl_diagram_policy_enforcer.inl  ctrl_diagram_trigger.h  ctrl_diagram_trigger.inl  ctrl_error.h  ctrl_multi_step_changer.h  ctrl_policy_enforcer.h  ctrl_policy_enforcer.inl  ctrl_simple_changer.h  ctrl_simple_changer.inl  ctrl_undo_redo_action_boundary.h  ctrl_undo_redo_entry.h  ctrl_undo_redo_entry.inl  ctrl_undo_redo_entry_type.h  ctrl_undo_redo_iterator.h  ctrl_undo_redo_iterator.inl  ctrl_undo_redo_list.h  ctrl_undo_redo_list.inl
ctrl/source/: ctrl_classifier.c  ctrl_classifier_controller.c  ctrl_classifier_policy_enforcer.c  ctrl_consistency_checker.c  ctrl_controller.c  ctrl_diagram.c  ctrl_diagram_controller.c  ctrl_diagram_policy_enforcer.c  ctrl_multi_step_changer.c  ctrl_policy_enforcer.c  ctrl_undo_redo_list.c
ctrl/test/: README.md
ctrl/unittest/: ctrl_classifier_controller_test.c  ctrl_classifier_controller_test.h  ctrl_classifier_policy_enforcer_test.c  ctrl_classifier_policy_enforcer_test.h  ctrl_consistency_checker_test.c  ctrl_consistency_checker_test.h  ctrl_controller_test.c  ctrl_controller_test.h  ctrl_diagram_controller_test.c  ctrl_diagram_controller_test.h  ctrl_diagram_policy_enforcer_test.c  ctrl_diagram_policy_enforcer_test.h  ctrl_policy_enforcer_test.c  ctrl_policy_enforcer_test.h  ctrl_undo_redo_list_test.c  ctrl_undo_redo_list_test.h
data/include/: data_change_notifier.h  data_classifier.h  data_classifier.inl  data_classifier_type.h  data_classifier_type.inl  data_database.h  data_database.inl  data_database_reader.h  data_database_writer.h  data_diagram.h  data_diagram.inl  data_diagram_flag.h  data_diagram_type.h  data_diagram_type.inl  data_diagramelement.h  data_diagramelement.inl  data_diagramelement_flag.h  data_error.h  data_feature.h  data_feature.inl  data_feature_type.h  data_feature_type.inl  data_guidelines.h  data_guidelines.inl  data_head.h  data_head.inl  data_head_key.h  data_id.h  data_id.inl  data_property.h  data_relationship.h  data_relationship.inl  data_relationship_type.h  data_row.h  data_row_id.h  data_rules.h  data_rules.inl  data_small_set.h  data_small_set.inl  data_table.h  (+7 more)
data/source/: data_change_notifier.c  data_classifier_type.c  data_database.c  data_database_reader.c  data_database_writer.c  data_diagram_type.c  data_feature_type.c  data_head_key.c  data_relationship_type.c  data_rules.c
data/test/: README.md
data/unittest/: data_change_notifier_test.c  data_change_notifier_test.h  data_database_listener_test.c  data_database_listener_test.h  data_database_reader_test.c  data_database_reader_test.h  data_json_tokenizer_test.c  data_json_tokenizer_test.h  data_rules_test.c  data_rules_test.h  data_small_set_test.c  data_small_set_test.h
documentation/architecture/: coding_guidelines.txt  lessons_learned.txt  programming_guidelines.txt  self_architecture.cfuJ
documentation/examples/: export_test_08_block.cfuJ  export_test_10_constraint.cfuJ  export_test_11_class.cfuJ  export_test_11_component.cfuJ  export_test_12_package.cfuJ  quality.cfuJ  (+11 more)
doxygen_build/: Doxyfile  Doxyfile_UserDocOnly  doxygen_config  make.sh  source_code_doc.txt
example_diagrams/: Makefile  export_test_08_block.cfu1  export_test_08_block.cfuJ  export_test_10_constraint.cfu1  export_test_10_constraint.cfuJ  export_test_11_class.cfu1  export_test_11_class.cfuJ  export_test_11_component.cfu1  export_test_11_component.cfuJ  export_test_12_package.cfu1  export_test_12_package.cfuJ  export_test_12_profile.cfuJ  export_test_14_state.cfu1  export_test_14_state.cfuJ  export_test_15_activity.cfu1  export_test_15_activity.cfuJ  export_test_16_requirement.cfu1  export_test_16_requirement.cfuJ  export_test_17_interaction.cfu1  export_test_17_sequence.cfu1  export_test_17_sequence.cfuJ  export_test_18_usecase.cfu1  export_test_18_usecase.cfuJ  export_test_19_deployment.cfu1  export_test_19_deployment.cfuJ  feature_gallery.cfu1  feature_gallery.cfu1_sqlite3  feature_gallery.txt  make.sh  mouse_droid.cfu1  mouse_droid.cfuJ  mouse_droid.json  mouse_droid_import_use_export.sh  pencil_tests.cfu1  pencil_tests.cfuJ  quality.cfu1  quality.cfu1_sqlite3  quality.cfuJ  quality.json  quality.tex  (+3 more)
installation_linux/: crystal-facet-uml.desktop  crystal-facet-uml.metainfo.xml
installation_win/: crystal-facet-uml.bat  crystal-facet-uml_readme.txt  crystal_facet_uml.bat  crystal_facet_uml_readme.txt  gschemas.compiled
package_build/: debian_dh_make.sh  debian_pack.sh  pack.sh  readme.markdown  source_pack.sh  source_test.sh  stat.sh
user_doc/: Makefile  MakefileLatex
(+1681 files in other folders)
